added genres endpoints and filament
